--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
         <h1 class="rc-title">React Challenge</h1>
 
-        <p class="rc-description">Search and Sort of data</p>
+        <p class="rc-description">Search and Sort</p>
     </div>
 </div>
 <div id="root"></div>
