--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="container">
         <img class="rc-img" src="images/react.svg" alt="">
 
-        <h1 class="rc-title">React Challenge</h1>
+        <h1 class="rc-title">Cool APP</h1>
 
-        <p class="rc-description">Поиск и сортировка данных</p>
+        <p class="rc-description">Система...</p>
     </div>
 </div>
 <div id="root"></div>
@@ -23,4 +23,3 @@
 <script src="js/bundle.js"></script>
 </body>
 </html>
-
