--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>React App</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -14,9 +13,9 @@
     <div class="container">
         <img class="rc-img" src="images/react.svg" alt="">
 
-        <h1 class="rc-title">React Challenge</h1>
+        <h1 class="rc-title">Cool APP</h1>
 
-        <p class="rc-description">Search and Sort</p>
+        <p class="rc-description">Система...</p>
     </div>
 </div>
 <div id="root"></div>
@@ -24,4 +23,3 @@
 <script src="js/bundle.js"></script>
 </body>
 </html>
-
